--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="js/index.js"></script>
+    <title>Java Script Learning</title>
+    <link rel="stylesheet" href="style.css"/>
+   
 </head>
-<!-- <body>
-    <button onclick="clickme()">Click me</button> -->
-    
+<body>
+     <script src="js/index.js"></script>
+    <h1>Hi this is for me Learning JavaScript</h1>
 </body>
 </html>
+
+<!-- we write this script tag in the body tag becuse if we do that in the head tag then the DOM will not work and hence many functions will not work here -->
